[package]
name = "goofy"
version = "0.2.0"
authors = ["Yves Savoy <ysavoy@gmail.com>"]
edition = "2018"
description = "Rust bindings to the mobile instagram API"
documentation = "https://docs.rs/goofy"
license = "MIT"
repository = "https://github.com/yvessavoy/goofy"
keywords = ["instagram", "api"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
serde = { version = "1.0.105", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
md5 = "0.7.0"
sha2 = "0.10.1"
digest = "0.9"
hmac = "0.11"
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
mockito = "0.30.0"